--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@
 /* фон */
 
 body {
-    background-image: url("/images/Discord_stUGWMHXom.png");
+    background-image: url("/images/9.png");
     background-size: 100%;
     background-size: cover;
     -webkit-background-size: 100%;
